feat(seeder): add superadminseeder based on env

--- a/.env.example
+++ b/.env.example
@@ -66,4 +66,8 @@ VITE_APP_NAME="${APP_NAME}"
 
 SUPER_ADMIN_ROLE_ID = 1
 
+DEFAULT_NAME='Superadmin'
+DEFAULT_EMAIL=admin@admin.com
+DEFAULT_PASSWORD=password
+
 JWT_SECRET=
